[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Tiles/tile set/plataforma 13.2 (bloco demovimento(on) ).png" type="Texture" id=1]
[ext_resource path="res://Assets/Tiles/tile set/plataforma 13.1 (bloco demovimento(off) ).png" type="Texture" id=2]
[ext_resource path="res://Scripts/Senarios/PlatMovel.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 2.5
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 37.3571, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 26.0434, 96.8274 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32.7764, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 26.1407, 3.78389 )

[node name="PlatMovel" type="Node2D"]
script = ExtResource( 3 )

[node name="Anim" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
playing = true

[node name="MudaDirecao" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Shape" type="CollisionShape2D" parent="MudaDirecao"]
position = Vector2( -0.353554, 16.617 )
shape = SubResource( 2 )

[node name="DetectorPerc" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="DetectorPerc"]
position = Vector2( -3.17956, -72.0782 )
shape = SubResource( 4 )

[node name="Body" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2( 0.793701, 19.8425 )
shape = SubResource( 5 )

[node name="Pisou" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pisou"]
position = Vector2( -1.32433, 5.29731 )
shape = SubResource( 6 )
[connection signal="body_entered" from="MudaDirecao" to="." method="_on_MudaDirecao_body_entered"]
[connection signal="body_exited" from="DetectorPerc" to="." method="_on_DetectorPerc_body_exited"]
[connection signal="body_entered" from="Pisou" to="." method="_on_Pisou_body_entered"]
